# python-project-49

./: Makefile  README.md  brain-calc.cast  brain-games.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  demo.bgain_even  demo.brain_calc  demo.brain_games  demo.brain_gcd  demo.brain_prime  demo.brain_progression  even.cast  pyproject.toml
brain_games/: b_even.py  cli.py  game_engine.py  games_fun.py
brain_games/games/: b_calc.py  b_even.py  b_gcd.py  b_prime.py  b_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/image/: unnamed.png:Zone.Identifier
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
